--- a/ElectiveTesting/ElectiveTesting.csproj
+++ b/ElectiveTesting/ElectiveTesting.csproj
@@ -160,6 +160,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ElectionController.cs" />
+    <Compile Include="Controllers\ElectiveController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -171,10 +172,12 @@
     <Compile Include="Models\Elective.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\UserElection.cs" />
     <Compile Include="Models\Vote.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\AssignedElectiveData.cs" />
+    <Compile Include="ViewModels\ElectionCreateData.cs" />
+    <Compile Include="ViewModels\ElectionIndexData.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -197,7 +200,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -237,6 +242,11 @@
     <Content Include="Views\Election\Details.cshtml" />
     <Content Include="Views\Election\Edit.cshtml" />
     <Content Include="Views\Election\Index.cshtml" />
+    <Content Include="Views\Elective\Create.cshtml" />
+    <Content Include="Views\Elective\Delete.cshtml" />
+    <Content Include="Views\Elective\Details.cshtml" />
+    <Content Include="Views\Elective\Edit.cshtml" />
+    <Content Include="Views\Elective\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
