Fixed minor bug + new election index
Fixed minor bug in election edit view.
Added a functionality so users can see elections they are a part of

--- a/ElectiveTesting/ElectiveTesting.csproj
+++ b/ElectiveTesting/ElectiveTesting.csproj
@@ -247,6 +247,7 @@
     <Content Include="Views\Elective\Details.cshtml" />
     <Content Include="Views\Elective\Edit.cshtml" />
     <Content Include="Views\Elective\Index.cshtml" />
+    <Content Include="Views\Election\Vote.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
