--- a/ElectiveTesting/ElectiveTesting.csproj
+++ b/ElectiveTesting/ElectiveTesting.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\AssignedElectiveData.cs" />
+    <Compile Include="ViewModels\CreateVoteData.cs" />
     <Compile Include="ViewModels\ElectionCreateData.cs" />
     <Compile Include="ViewModels\ElectionIndexData.cs" />
   </ItemGroup>
